lipu-nasin-pona: use frontmatter more

--- a/lipu-nasin-pona/01.md
+++ b/lipu-nasin-pona/01.md
@@ -1,14 +1,9 @@
 ---
 layout: lipu-nasin-pona
-title: lupa pi nasa pona ale • lipu Nasin Pona
-sidebar:
-  - title: "kasi ante"
-    text: |
-      * [kasi ale](index)
-      * [sinpin la, <br/> kasi nanpa tu](2)
-      {:.kasi-nav-sidebar}
+chapter: 1
+title: lupa pi nasa pona ale
+status: done
 ---
-
 
 {:.loseta}
 |:-:|-|-
@@ -23,8 +18,6 @@ sidebar:
 | 同谓之玄               | sama ni li seme.                                             | This sameness is the mystery,
 | 玄之又玄               | weka sona li sama ni.                                        | Mystery within mystery;
 | 众妙之门               | ni li open e nasa wawa mute.                                 | The door to all marvels.
-
-{% include kasi-nav.html num=1 %}
 
 -------
 {:#sitelen}
