--- a/lipu-nasin-pona/02.md
+++ b/lipu-nasin-pona/02.md
@@ -1,13 +1,8 @@
 ---
 layout: lipu-nasin-pona
-title: sona pi toki ala • lipu Nasin Pona
-sidebar:
-  - title: "kasi ante"
-    text: |
-      * [monsi la, <br/> kasi nanpa wan](1)
-      * [kasi ale](index)
-      * [sinpin la, <br/> kasi nanpa 3](3)
-      {:.kasi-nav-sidebar}
+title: sona pi toki ala
+chapter: 2
+status: done
 ---
 
 {:.loseta}
@@ -30,8 +25,6 @@ sidebar:
 | 功成而弗居             | ni li pali anu seme?                                        | And accomplishes without abiding in her accomplishments.
 | 夫唯弗居               | jan wan anu seme?                                           | It is precisely because she does not abide in them
 | 是以不去               | ni la, tawa ala.                                            | That they never leave her.
-
-{% include kasi-nav.html num=2 %}
 
 -------
 {:#sitelen}
