--- a/lipu-nasin-pona/03.md
+++ b/lipu-nasin-pona/03.md
@@ -1,13 +1,8 @@
 ---
 layout: lipu-nasin-pona
-title: pali ala • lipu Nasin Pona
-sidebar:
-  - title: "kasi ante"
-    text: |
-      * [monsi la, <br/> kasi nanpa tu](2)
-      * [kasi ale](index)
-      * [sinpin la, <br/> kasi nanpa 4](4)
-      {:.kasi-nav-sidebar}
+title: pali ala
+chapter: 3
+status: done
 ---
 
 {:.loseta}
