--- a/lipu-nasin-pona/04.md
+++ b/lipu-nasin-pona/04.md
@@ -1,13 +1,8 @@
 ---
 layout: lipu-nasin-pona
-title: jo ala • lipu Nasin Pona
-sidebar:
-  - title: "kasi ante"
-    text: |
-      * [monsi la, <br/> kasi nanpa 3](3)
-      * [kasi ale](index)
-      * [sinpin la, <br/> kasi nanpa 5](5)
-      {:.kasi-nav-sidebar}
+title: jo ala
+chapter: 4
+status: done
 ---
 
 {:.loseta}
