--- a/lipu-nasin-pona/06.md
+++ b/lipu-nasin-pona/06.md
@@ -1,13 +1,8 @@
 ---
 layout: lipu-nasin-pona
-title: lipu nasin la, kasi nanpa 6 • lipu Nasin Pona
-sidebar:
-  - title: "kasi ante"
-    text: |
-      * [monsi la, <br/> kasi nanpa 5](5)
-      * [kasi ale](index)
-      * [sinpin la, <br/> kasi nanpa 7](7)
-      {:.kasi-nav-sidebar}
+chapter: 6
+title: kon lupa nena
+status: done
 ---
 
 {:.loseta}
@@ -18,8 +13,6 @@ sidebar:
 | 是谓天地<!--之-->根 | nimi ni li mama sewi li mama ma. | Is called “the root of Heaven and Earth.”
 | 系系若存     | _linja linja li sama awen._      | Continuous, seeming to remain.
 | 用之不勤     | kepeken taso pali ala.           | Use it without exertion.
-
-{% include kasi-nav.html num=6 %}
 
 -------
 {:#sitelen}
