--- a/lipu-nasin-pona/07.md
+++ b/lipu-nasin-pona/07.md
@@ -1,13 +1,8 @@
 ---
 layout: lipu-nasin-pona
-title: lipu nasin la, kasi nanpa 7 • lipu Nasin Pona
-sidebar:
-  - title: "kasi ante"
-    text: |
-      * [monsi la, <br/> kasi nanpa 6](6)
-      * [kasi ale](index)
-      * [sinpin la, <br/> kasi nanpa 8](8)
-      {:.kasi-nav-sidebar}
+chapter: 7
+title: sinpin en monsi
+status: done
 ---
 
 {:.loseta}
@@ -20,8 +15,6 @@ sidebar:
 | 外其身而身存               | jan sewi li poka e ona. taso, ona li insa.                | She is outside herself and therefore her self lasts.
 | 非以其无私耶               | tan ala tan pilin insa ona li len ala,                    | Is it not through her selflessness
 | 故能成其私                 | la: ona li ken pona e pilin insa!                         | That she is able to perfect herself?
-
-{% include kasi-nav.html num=7 %}
 
 -------
 {:#sitelen}
