--- a/lipu-nasin-pona/08.md
+++ b/lipu-nasin-pona/08.md
@@ -1,13 +1,8 @@
 ---
 layout: lipu-nasin-pona
-title: lipu nasin la, kasi nanpa 8 • lipu Nasin Pona
-sidebar:
-  - title: "kasi ante"
-    text: |
-      * [monsi la, <br/> kasi nanpa 7](7)
-      * [kasi ale](index)
-      * [sinpin la, <br/> kasi nanpa 9](9)
-      {:.kasi-nav-sidebar}
+chapter: 8
+title: telo
+status: wip
 ---
 
 {:.loseta}
@@ -24,8 +19,6 @@ sidebar:
 | 事善能               | pali pona li tan ken.                      | In handling affairs, ability is good.
 | 动善时               | pali pona li tan tenpo.                    | [uninterpreted]
 | 夫唯不争<wbr/>故无尤 | jan li wile ala la: jan ante li _monsuta_ ala e ona. | If you do not wrangle, you will not be blamed.
-
-{% include kasi-nav.html num=8 %}
 
 -------
 {:#sitelen}
