--- a/lipu-nasin-pona/09.md
+++ b/lipu-nasin-pona/09.md
@@ -1,13 +1,8 @@
 ---
 layout: lipu-nasin-pona
-title: lipu nasin la, kasi nanpa 9 • lipu Nasin Pona
-sidebar:
-  - title: "kasi ante"
-    text: |
-      * [monsi la, <br/> kasi nanpa 8](8)
-      * [kasi ale](index)
-      * [sinpin la, <br/> kasi nanpa 10](10)
-      {:.kasi-nav-sidebar}
+chapter: 9
+title: o weka jo
+status: wip
 ---
 
 {:.loseta}
@@ -18,8 +13,6 @@ sidebar:
 | 富贵而骄<wbr/>自遗其咎 | jan li toki tan suli pi ona la: _ona li weka tawa tenpo kama._    | Boasting of wealth and virtue brings your demise.
 | 功遂身退               | _pali pini_ la: o lape.                                           | After finishing the work, withdraw.
 | 天之道                 | ni li nasin sewi.                                                 | This is the Way of Heaven.
-
-{% include kasi-nav.html num=9 %}
 
 -------
 {:#sitelen}
