--- a/lipu-nasin-pona/10.md
+++ b/lipu-nasin-pona/10.md
@@ -1,13 +1,8 @@
 ---
 layout: lipu-nasin-pona
-title: lipu nasin la, kasi nanpa 10 • lipu Nasin Pona
-sidebar:
-  - title: "kasi ante"
-    text: |
-      * [monsi la, <br/> kasi nanpa 9](9)
-      * [kasi ale](index)
-      * [sinpin la, <br/> kasi nanpa 11](11)
-      {:.kasi-nav-sidebar}
+chapter: 10
+title: jan lili sin
+status: done
 ---
 
 {:.loseta}
@@ -15,7 +10,7 @@ sidebar:
 | 载营块抱一 | o pona e insa, o awen e wan.       | Pacifying the agitated material soul and holding to oneness:
 | 能无离乎   | o tu ala la: ken ala ken?          | Are you able to avoid separation?
 | 专气致柔   | o pali e kon, sama suwi.           | Focusing your energy on the release of tension:
-| 能婴儿乎   | o sama e jan lili la: ken ala ken? | Can you be like an infant?
+| 能婴儿乎   | o sama e jan lili sin la: ken ala ken? | Can you be like an infant?
 | 涤除玄览   | o weka e nasa sona.                | In purifying your insight:
 | 能无疲乎   | o ike ala la: ken ala ken?         | Can you un-obstruct it?
 | 爱民治国   | o olin e jan, o lawa e kulupu.     | Loving the people and ruling the state:
