--- a/lipu-nasin-pona/11.md
+++ b/lipu-nasin-pona/11.md
@@ -1,13 +1,8 @@
 ---
 layout: lipu-nasin-pona
-title: lipu nasin la, kasi nanpa 11 • lipu Nasin Pona
-sidebar:
-  - title: "kasi ante"
-    text: |
-      * [monsi la, <br/> kasi nanpa 10](10)
-      * [kasi ale](index)
-      * [sinpin la, <br/> kasi nanpa 12](12)
-      {:.kasi-nav-sidebar}
+chapter: 11
+title: lon ala
+status: done
 ---
 
 {:.loseta}
@@ -20,8 +15,6 @@ sidebar:
 | 当其无<wbr/>有室之用 | insa tomo li ala. tan ni la, jan li kepeken e tomo.              | It is because of its emptiness that the room is useful.
 | 故<wbr/>有之以为利   | _tan pona ona_ la, jan li kepeken e _ijo lon_.                   | Therefore, what is present is used for profit.
 | 无之以为用           | _tan pali ona_ la, jan li kepeken e _weka_.                      | But it is in absence that there is usefulness.
-
-{% include kasi-nav.html num=11 %}
 
 -------
 {:#sitelen}
