--- a/lipu-nasin-pona/12.md
+++ b/lipu-nasin-pona/12.md
@@ -1,13 +1,8 @@
 ---
 layout: lipu-nasin-pona
-title: lipu nasin la, kasi nanpa 12 • lipu Nasin Pona
-sidebar:
-  - title: "kasi ante"
-    text: |
-      * [monsi la, <br/> kasi nanpa 11](11)
-      * [kasi ale](index)
-      * [sinpin la, <br/> kasi nanpa 13](13)
-      {:.kasi-nav-sidebar}
+chapter: 12
+title: insa la, lukin ala
+status: done
 ---
 
 {:.loseta}
@@ -19,8 +14,6 @@ sidebar:
 | 难得之货<wbr/>令人行妨         | ijo mani li pakala e pona jan.         | Possessing rare treasures brings about harmful behavior.
 | 是以<wbr/>圣人为腹<wbr/>不为目 | o pali tan insa, o pali ala tan lukin. | Therefore the sage acts from his gut, and not from his eyes.
 | 故<wbr/>去彼取此               | o weka e ona, o _anu_ e ni.            | He lets go of that and chooses this.
-
-{% include kasi-nav.html num=12 %}
 
 -------
 {:#sitelen}
