--- a/lipu-nasin-pona/13.md
+++ b/lipu-nasin-pona/13.md
@@ -1,13 +1,8 @@
 ---
 layout: lipu-nasin-pona
-title: lipu nasin la, kasi nanpa 13 • lipu Nasin Pona
-sidebar:
-  - title: "kasi ante"
-    text: |
-      * [monsi la, <br/> kasi nanpa 12](12)
-      * [kasi ale](index)
-      * [sinpin la, <br/> kasi nanpa 14](14)
-      {:.kasi-nav-sidebar}
+chapter: 13
+title: jan ala...
+status: done
 ---
 
 {:.loseta}
@@ -25,8 +20,6 @@ sidebar:
 | 若可寄天下     | ijo ale li mama e sina. | You can rely on the world.
 | 爱以身为天下   | sina olin e pali ni la: | If you love dedicating yourself in this way,
 | 若可託天下     | ijo ale li olin e sina. | You can be entrusted with the world.
-
-{% include kasi-nav.html num=13 %}
 
 -------
 {:#sitelen}
