--- a/lipu-nasin-pona/14.md
+++ b/lipu-nasin-pona/14.md
@@ -1,13 +1,8 @@
 ---
 layout: lipu-nasin-pona
-title: lipu nasin la, kasi nanpa 14 • lipu Nasin Pona
-sidebar:
-  - title: "kasi ante"
-    text: |
-      * [monsi la, <br/> kasi nanpa 13](13)
-      * [kasi ale](index)
-      * [sinpin la, <br/> kasi nanpa 15](15)
-      {:.kasi-nav-sidebar}
+chapter: 14
+title: nasin pi ken ala toki
+status: wip
 ---
 
 {:.loseta}
@@ -32,8 +27,6 @@ sidebar:
 | 以御今之有     | jan li lawa e _tenpo ni_. | You can manage present existence
 | 能知古始       | o sona e open majuna. | And know the primordial beginning.
 | 是谓道纪       | nimi ni li open pi sewi Nasin. | This is called the very beginning thread of the Way.
-
-{% include kasi-nav.html num=14 %}
 
 -------
 {:#sitelen}
