--- a/lipu-nasin-pona/15.md
+++ b/lipu-nasin-pona/15.md
@@ -1,13 +1,8 @@
 ---
 layout: lipu-nasin-pona
-title: lipu nasin la, kasi nanpa 15 • lipu Nasin Pona
-sidebar:
-  - title: "kasi ante"
-    text: |
-      * [monsi la, <br/> kasi nanpa 14](14)
-      * [kasi ale](index)
-      * [sinpin la, <br/> kasi nanpa 16](16)
-      {:.kasi-nav-sidebar}
+chapter: 15
+title: linluwi nasa
+status: wip
 ---
 
 {:.loseta}
@@ -30,8 +25,6 @@ sidebar:
 | 不欲盈       | … li wile ala.                              | […] does not crave fulfillment.
 | 夫唯不盈     | jan pi wile ala…                            | Precisely because he does not crave fulfillment
 | 故能蔽不新成 | li ken _len_, li ken _wile ala e pali sin_. | He can be shattered[,] And do without quick restitution.
-
-{% include kasi-nav.html num=15 %}
 
 -------
 {:#sitelen}
