--- a/lipu-nasin-pona/16.md
+++ b/lipu-nasin-pona/16.md
@@ -1,13 +1,8 @@
 ---
 layout: lipu-nasin-pona
-title: lipu nasin la, kasi nanpa 16 • lipu Nasin Pona
-sidebar:
-  - title: "kasi ante"
-    text: |
-      * [monsi la, <br/> kasi nanpa 15](15)
-      * [kasi ale](index)
-      * [sinpin la, <br/> kasi nanpa 17](17)
-      {:.kasi-nav-sidebar}
+title: o kama sin tawa mama
+chapter: 16
+status: wip
 ---
 
 {:.loseta}
@@ -28,8 +23,6 @@ sidebar:
 | 天乃道                   | sewi li nasin.                      | Heaven is the Way
 | 道乃久                   | sewi Nasin li tenpo ale.            | the Way is eternal.
 | 没身不殆                 | sijelo li moli la, jan li moli ala. | Though you lose the body, you do not die.
-
-{% include kasi-nav.html num=16 %}
 
 -------
 {:#sitelen}
