--- a/lipu-nasin-pona/18.md
+++ b/lipu-nasin-pona/18.md
@@ -1,13 +1,8 @@
 ---
 layout: lipu-nasin-pona
-title: lipu nasin la, kasi nanpa 18 • lipu Nasin Pona
-sidebar:
-  - title: "kasi ante"
-    text: |
-      * [monsi la, <br/> kasi nanpa 17](17)
-      * [kasi ale](index)
-      * [sinpin la, <br/> kasi nanpa 19](19)
-      {:.kasi-nav-sidebar}
+chapter: 18
+title: moli ...
+status: ready
 ---
 
 {:.loseta}
@@ -20,8 +15,6 @@ sidebar:
 | 有孝慈   |  | There is filial piety and compassion.
 | 国家昏乱 |  | When the country is in chaos
 | 有忠臣   |  | Loyal ministers appear.
-
-{% include kasi-nav.html num=18 %}
 
 -------
 {:#sitelen}
