--- a/lipu-nasin-pona/19.md
+++ b/lipu-nasin-pona/19.md
@@ -1,13 +1,8 @@
 ---
 layout: lipu-nasin-pona
-title: lipu nasin la, kasi nanpa 19 • lipu Nasin Pona
-sidebar:
-  - title: "kasi ante"
-    text: |
-      * [monsi la, <br/> kasi nanpa 18](18)
-      * [kasi ale](index)
-      * [sinpin la, <br/> kasi nanpa 20](20)
-      {:.kasi-nav-sidebar}
+chapter: 19
+title: len pona
+status: ready
 ---
 
 {:.loseta}
@@ -19,8 +14,6 @@ sidebar:
 | 故令有所属  |  | Therefore there must be something to include them all.
 | 见素抱朴  |  | See the origin and keep the non-differentiated state.
 | 少私寡欲  |  | Lessen selfishness and decrease desire.
-
-{% include kasi-nav.html num=19 %}
 
 -------
 {:#sitelen}
