--- a/lipu-nasin-pona/21.md
+++ b/lipu-nasin-pona/21.md
@@ -1,13 +1,8 @@
 ---
 layout: lipu-nasin-pona
-title: lipu nasin la, kasi nanpa 21 • lipu Nasin Pona
-sidebar:
-  - title: "kasi ante"
-    text: |
-      * [monsi la, <br/> kasi nanpa 20](20)
-      * [kasi ale](index)
-      * [sinpin la, <br/> kasi nanpa 22](22)
-      {:.kasi-nav-sidebar}
+status: ready
+chapter: 21
+title: wawa suli
 ---
 
 {:.loseta}
@@ -21,8 +16,6 @@ sidebar:
 | 自古及今<wbr/>其名不去<wbr/>以阅众甫 |  | From the present to antiquity, its name has never left it, so we can examine all origins.
 | 吾何以知众甫之状哉 |  | How do I know the form of all origins?
 | 以此 |  | By this.
-
-{% include kasi-nav.html num=21 %}
 
 -------
 {:#sitelen}
