--- a/lipu-nasin-pona/22.md
+++ b/lipu-nasin-pona/22.md
@@ -1,13 +1,8 @@
 ---
 layout: lipu-nasin-pona
-title: lipu nasin la, kasi nanpa 22 • lipu Nasin Pona
-sidebar:
-  - title: "kasi ante"
-    text: |
-      * [monsi la, <br/> kasi nanpa 21](21)
-      * [kasi ale](index)
-      * [sinpin la, <br/> kasi nanpa 23](23)
-      {:.kasi-nav-sidebar}
+chapter: 22
+title: o jo e wan...
+status: ready
 ---
 
 {:.loseta}
@@ -26,8 +21,6 @@ sidebar:
 | 夫唯不争<wbr/>故天下莫<wbr/>能与之争 |  | It is exactly because she does not contend, that nobody can contend with her.
 | 古之所谓<wbr/>曲则全者<wbr/>岂虚言哉 |  | How could the ancient saying, “The imperfect is completed” be regarded as empty talk?
 | 诚全而归之                           |  | Believe in the complete and return to it.
-
-{% include kasi-nav.html num=22 %}
 
 -------
 {:#sitelen}
