--- a/lipu-nasin-pona/24.md
+++ b/lipu-nasin-pona/24.md
@@ -1,13 +1,7 @@
 ---
 layout: lipu-nasin-pona
-title: lipu nasin la, kasi nanpa 24 • lipu Nasin Pona
-sidebar:
-  - title: "kasi ante"
-    text: |
-      * [monsi la, <br/> kasi nanpa 23](23)
-      * [kasi ale](index)
-      * [sinpin la, <br/> kasi nanpa 25](25)
-      {:.kasi-nav-sidebar}
+chapter: 24
+status: ready
 ---
 
 {:.loseta}
@@ -22,8 +16,6 @@ sidebar:
 | 馀食赘行         |  | Leftover food and wasted action
 | 物或恶之         |  | And all things dislike them.
 | 故有道者不处     |  | Therefore the person of the Way does not act like this.
-
-{% include kasi-nav.html num=24 %}
 
 -------
 {:#sitelen}
