--- a/lipu-nasin-pona/25.md
+++ b/lipu-nasin-pona/25.md
@@ -1,13 +1,7 @@
 ---
 layout: lipu-nasin-pona
-title: lipu nasin la, kasi nanpa 25 • lipu Nasin Pona
-sidebar:
-  - title: "kasi ante"
-    text: |
-      * [monsi la, <br/> kasi nanpa 24](24)
-      * [kasi ale](index)
-      * [sinpin la, <br/> kasi nanpa 26](26)
-      {:.kasi-nav-sidebar}
+chapter: 25
+status: ready
 ---
 
 {:.loseta}
@@ -30,8 +24,6 @@ sidebar:
 | 地法天                       |  | Earth follows Heaven
 | 天法道                       |  | Heaven follows the Way
 | 道法自然                     |  | The Way follows things as they are.
-
-{% include kasi-nav.html num=25 %}
 
 -------
 {:#sitelen}
