--- a/lipu-nasin-pona/26.md
+++ b/lipu-nasin-pona/26.md
@@ -1,13 +1,7 @@
 ---
 layout: lipu-nasin-pona
-title: lipu nasin la, kasi nanpa 26 • lipu Nasin Pona
-sidebar:
-  - title: "kasi ante"
-    text: |
-      * [monsi la, <br/> kasi nanpa 25](25)
-      * [kasi ale](index)
-      * [sinpin la, <br/> kasi nanpa 27](27)
-      {:.kasi-nav-sidebar}
+chapter: 26
+status: ready
 ---
 
 {:.loseta}
@@ -23,8 +17,6 @@ sidebar:
 | 而以身轻天下         |  | Be so concerned with himself as to ignore the people?
 | 轻则失本             |  | If you take them lightly you will lose your roots.
 | 躁则失君             |  | If you are unstable, you will lose your rulership.
-
-{% include kasi-nav.html num=26 %}
 
 -------
 {:#sitelen}
