--- a/lipu-nasin-pona/27.md
+++ b/lipu-nasin-pona/27.md
@@ -1,13 +1,7 @@
 ---
 layout: lipu-nasin-pona
-title: lipu nasin la, kasi nanpa 27 • lipu Nasin Pona
-sidebar:
-  - title: "kasi ante"
-    text: |
-      * [monsi la, <br/> kasi nanpa 26](26)
-      * [kasi ale](index)
-      * [sinpin la, <br/> kasi nanpa 28](28)
-      {:.kasi-nav-sidebar}
+chapter: 27
+status: ready
 ---
 
 {:.loseta}
@@ -27,8 +21,6 @@ sidebar:
 | 不贵其师<wbr/>不爱其资   |  | Not valuing your teacher or not loving your students:
 | 虽智大迷                 |  | Even if you are smart, you are gravely in error.
 | 是谓要妙                 |  | This is called Essential Subtlety.
-
-{% include kasi-nav.html num=27 %}
 
 -------
 {:#sitelen}
