--- a/lipu-nasin-pona/28.md
+++ b/lipu-nasin-pona/28.md
@@ -1,13 +1,7 @@
 ---
 layout: lipu-nasin-pona
-title: lipu nasin la, kasi nanpa 28 • lipu Nasin Pona
-sidebar:
-  - title: "kasi ante"
-    text: |
-      * [monsi la, <br/> kasi nanpa 27](27)
-      * [kasi ale](index)
-      * [sinpin la, <br/> kasi nanpa 29](29)
-      {:.kasi-nav-sidebar}
+chapter: 28
+status: ready
 ---
 
 {:.loseta}
@@ -32,8 +26,6 @@ sidebar:
 | 故大制不割             |  | Therefore the great tailor does not cut.
 
 [^1]: [Miller:] The “black” is the deep, religious, mystic part of our experience. The “white” is our involvement in mundane affairs. We should well understand how the conventional world operates, but our priority should lie in adhering to deeper principles.
-
-{% include kasi-nav.html num=28 %}
 
 -------
 {:#sitelen}
