--- a/lipu-nasin-pona/29.md
+++ b/lipu-nasin-pona/29.md
@@ -1,13 +1,7 @@
 ---
 layout: lipu-nasin-pona
-title: lipu nasin la, kasi nanpa 29 • lipu Nasin Pona
-sidebar:
-  - title: "kasi ante"
-    text: |
-      * [monsi la, <br/> kasi nanpa 28](28)
-      * [kasi ale](index)
-      * [sinpin la, <br/> kasi nanpa 30](30)
-      {:.kasi-nav-sidebar}
+chapter: 29
+status: ready
 ---
 
 {:.loseta}
@@ -25,8 +19,6 @@ sidebar:
 | 是以圣人去甚           |  | Hence, the sage shuns excess
 | 去奢                   |  | Shuns grandiosity
 | 去泰                   |  | Shuns arrogance.
-
-{% include kasi-nav.html num=29 %}
 
 -------
 {:#sitelen}
