--- a/lipu-nasin-pona/30.md
+++ b/lipu-nasin-pona/30.md
@@ -1,13 +1,7 @@
 ---
 layout: lipu-nasin-pona
-title: lipu nasin la, kasi nanpa 30 • lipu Nasin Pona
-sidebar:
-  - title: "kasi ante"
-    text: |
-      * [monsi la, <br/> kasi nanpa 29](29)
-      * [kasi ale](index)
-      * [sinpin la, <br/> kasi nanpa 31](31)
-      {:.kasi-nav-sidebar}
+chapter: 30
+status: ready
 ---
 
 {:.loseta}
@@ -29,8 +23,6 @@ sidebar:
 | 物壮则老     |  | When things flourish they decline.
 | 是谓不道     |  | This is called non-Way
 | 不道早已     |  | The non-Way is short-lived.
-
-{% include kasi-nav.html num=30 %}
 
 -------
 {:#sitelen}
