--- a/lipu-nasin-pona/32.md
+++ b/lipu-nasin-pona/32.md
@@ -1,13 +1,7 @@
 ---
 layout: lipu-nasin-pona
-title: lipu nasin la, kasi nanpa 32 • lipu Nasin Pona
-sidebar:
-  - title: "kasi ante"
-    text: |
-      * [monsi la, <br/> kasi nanpa 31](31)
-      * [kasi ale](index)
-      * [sinpin la, <br/> kasi nanpa 33](33)
-      {:.kasi-nav-sidebar}
+chapter: 32
+status: ready
 ---
 
 {:.loseta}
@@ -28,8 +22,6 @@ sidebar:
 | 犹川谷之与江海 |  | Is like valley streams running into the rivers and seas.
 
 [^1] This triplet of characters may have been added by a later commenter?
-
-{% include kasi-nav.html num=32 %}
 
 -------
 {:#sitelen}
