--- a/lipu-nasin-pona/33.md
+++ b/lipu-nasin-pona/33.md
@@ -1,13 +1,8 @@
 ---
 layout: lipu-nasin-pona
-title: lipu nasin la, kasi nanpa 33 • lipu Nasin Pona
-sidebar:
-  - title: "kasi ante"
-    text: |
-      * [monsi la, <br/> kasi nanpa 32](32)
-      * [kasi ale](index)
-      * [sinpin la, <br/> kasi nanpa 34](34)
-      {:.kasi-nav-sidebar}
+chapter: 33
+title: sona mi...
+status: wip
 ---
 
 {:.loseta}
@@ -20,8 +15,6 @@ sidebar:
 | 强行者有志   |  | If you can act with vigor,<wbr/> you have a will.
 | 不失其所者久 |  | If you don't lose your objectives[,]<wbr/> you can be long-lasting.
 | 死而不亡者寿 |  | If you die without loss,<wbr/> you are eternal.
-
-{% include kasi-nav.html num=33 %}
 
 -------
 {:#sitelen}
