--- a/lipu-nasin-pona/34.md
+++ b/lipu-nasin-pona/34.md
@@ -1,13 +1,7 @@
 ---
 layout: lipu-nasin-pona
-title: lipu nasin la, kasi nanpa 34 • lipu Nasin Pona
-sidebar:
-  - title: "kasi ante"
-    text: |
-      * [monsi la, <br/> kasi nanpa 33](33)
-      * [kasi ale](index)
-      * [sinpin la, <br/> kasi nanpa 35](35)
-      {:.kasi-nav-sidebar}
+chapter: 34
+status: ready
 ---
 
 {:.loseta}
@@ -21,8 +15,6 @@ sidebar:
 | 可名为大                 |  | Thus it can be called “great.”
 | 以其终不自为大           |  | Till the end, it does not regard itself as Great.
 | 故能成其大               |  | Therefore it able to be great.
-
-{% include kasi-nav.html num=34 %}
 
 -------
 {:#sitelen}
