--- a/lipu-nasin-pona/35.md
+++ b/lipu-nasin-pona/35.md
@@ -1,13 +1,7 @@
 ---
 layout: lipu-nasin-pona
-title: lipu nasin la, kasi nanpa 35 • lipu Nasin Pona
-sidebar:
-  - title: "kasi ante"
-    text: |
-      * [monsi la, <br/> kasi nanpa 34](34)
-      * [kasi ale](index)
-      * [sinpin la, <br/> kasi nanpa 36](36)
-      {:.kasi-nav-sidebar}
+chapter: 35
+status: ready
 ---
 
 {:.loseta}
@@ -23,8 +17,6 @@ sidebar:
 | 用之<wbr/>不可既     |  | Use it[, y]ou cannot exhaust it.
 
 [^1]: [Miller:] "As far as I can tell, I am the only translator who takes 往 as “going forth” rather than “come.” Where in any other text do we see the rendering of “come”? I take it to mean that if people will hold on to the Dao as they go out in the world, they won't have trouble, and will enjoy peace and calm. This seems to accord with the general message of the Daodejing."
-
-{% include kasi-nav.html num=35 %}
 
 -------
 {:#sitelen}
