--- a/lipu-nasin-pona/36.md
+++ b/lipu-nasin-pona/36.md
@@ -1,13 +1,8 @@
 ---
 layout: lipu-nasin-pona
-title: lipu nasin la, kasi nanpa 36 • lipu Nasin Pona
-sidebar:
-  - title: "kasi ante"
-    text: |
-      * [monsi la, <br/> kasi nanpa 35](35)
-      * [kasi ale](index)
-      * [sinpin la, <br/> kasi nanpa 37](37)
-      {:.kasi-nav-sidebar}
+chapter: 36
+title: suno lili...
+status: wip
 ---
 
 {:.loseta}
@@ -25,8 +20,6 @@ sidebar:
 | 鱼不可脱于渊 |                              | A fish should not leave the depths of the waters.
 | 国之利器     |                              | The country's potent weapons
 | 不可以示人   |                              | Should not be shown to its people.
-
-{% include kasi-nav.html num=36 %}
 
 -------
 {:#sitelen}
