--- a/lipu-nasin-pona/37.md
+++ b/lipu-nasin-pona/37.md
@@ -1,13 +1,7 @@
 ---
 layout: lipu-nasin-pona
-title: lipu nasin la, kasi nanpa 37 • lipu Nasin Pona
-sidebar:
-  - title: "kasi ante"
-    text: |
-      * [monsi la, <br/> kasi nanpa 36](36)
-      * [kasi ale](index)
-      * [sinpin la, <br/> kasi nanpa 38](38)
-      {:.kasi-nav-sidebar}
+chapter: 37
+status: ready
 ---
 
 {:.loseta}
@@ -22,8 +16,6 @@ sidebar:
 | 夫亦将无欲 |  | They become desireless.
 | 不欲以静 |  | Desireless, they are tranquil and
 | 天下将自定 |  | All-under-Heaven is naturally settled.
-
-{% include kasi-nav.html num=37 %}
 
 -------
 {:#sitelen}
