--- a/lipu-nasin-pona/38.md
+++ b/lipu-nasin-pona/38.md
@@ -1,13 +1,8 @@
 ---
 layout: lipu-nasin-pona
-title: lipu pona la, kasi nanpa 38 • lipu Nasin Pona
-sidebar:
-  - title: "kasi ante"
-    text: |
-      * [monsi la, <br/> kasi nanpa 37](37)
-      * [kasi ale](index)
-      * [sinpin la, <br/> kasi nanpa 39](39)
-      {:.kasi-nav-sidebar}
+chapter: 38
+title: kili en ala kasi kule
+status: wip
 ---
 
 {:.loseta}
@@ -38,8 +33,6 @@ sidebar:
 | 不居其薄               |  | And not in the superficial.
 | 处其实<wbr/>不居其华   |  | Rests in the fruit and not in the flower.
 | 故去彼取此             | la o weka. o jo e ni. | So let go of that and grasp this.
-
-{% include kasi-nav.html num=38 %}
 
 -------
 {:#sitelen}
