--- a/lipu-nasin-pona/41.md
+++ b/lipu-nasin-pona/41.md
@@ -1,13 +1,7 @@
 ---
 layout: lipu-nasin-pona
-title: lipu pona la, kasi nanpa 41 • lipu Nasin Pona
-sidebar:
-  - title: "kasi ante"
-    text: |
-      * [monsi la, <br/> kasi nanpa 40](40)
-      * [kasi ale](index)
-      * [sinpin la, <br/> kasi nanpa 42](42)
-      {:.kasi-nav-sidebar}
+chapter: 41
+status: ready
 ---
 
 {:.loseta}
@@ -33,8 +27,6 @@ sidebar:
 | 大象无形 |  | The great form has no shape.
 | 道隐无名 |  | The Way is hidden and nameless.
 | 夫唯道<wbr/>善贷且成 |  | This is exactly why the Way is good at developing and perfecting.
-
-{% include kasi-nav.html num=41 %}
 
 -------
 {:#sitelen}
