--- a/lipu-nasin-pona/42.md
+++ b/lipu-nasin-pona/42.md
@@ -1,13 +1,8 @@
 ---
 layout: lipu-nasin-pona
-title: lipu pona la, kasi nanpa 42 • lipu Nasin Pona
-sidebar:
-  - title: "kasi ante"
-    text: |
-      * [monsi la, <br/> kasi nanpa 41](41)
-      * [kasi ale](index)
-      * [sinpin la, <br/> kasi nanpa 43](43)
-      {:.kasi-nav-sidebar}
+chapter: 42
+title: wan en tu en mute
+status: ready
 ---
 
 {:.loseta}
@@ -25,8 +20,6 @@ sidebar:
 | 我亦教之             |  | I also teach:
 | 强梁者不得其死       |  | “The forceful do not choose their place of death.”
 | 吾将以为教父         |  | I regard this as the father of all teachings.
-
-{% include kasi-nav.html num=42 %}
 
 -------
 {:#sitelen}
