--- a/lipu-nasin-pona/44.md
+++ b/lipu-nasin-pona/44.md
@@ -1,13 +1,7 @@
 ---
 layout: lipu-nasin-pona
-title: lipu pona la, kasi nanpa 44 • lipu Nasin Pona
-sidebar:
-  - title: "kasi ante"
-    text: |
-      * [monsi la, <br/> kasi nanpa 43](43)
-      * [kasi ale](index)
-      * [sinpin la, <br/> kasi nanpa 45](45)
-      {:.kasi-nav-sidebar}
+chapter: 44
+status: ready
 ---
 
 {:.loseta}
@@ -20,8 +14,6 @@ sidebar:
 | 知足不辱       |  | Knowing what is enough, you will not be humiliated.
 | 知止不殆       |  | Knowing where to stop, you will not be imperiled
 | 可以长久       |  | And can be long-lasting.
-
-{% include kasi-nav.html num=44 %}
 
 -------
 {:#sitelen}
