--- a/lipu-nasin-pona/45.md
+++ b/lipu-nasin-pona/45.md
@@ -1,13 +1,7 @@
 ---
 layout: lipu-nasin-pona
-title: lipu pona la, kasi nanpa 45 • lipu Nasin Pona
-sidebar:
-  - title: "kasi ante"
-    text: |
-      * [monsi la, <br/> kasi nanpa 44](44)
-      * [kasi ale](index)
-      * [sinpin la, <br/> kasi nanpa 46](46)
-      {:.kasi-nav-sidebar}
+chapter: 45
+status: ready
 ---
 
 {:.loseta}
@@ -19,8 +13,6 @@ sidebar:
 | 大辩若讷               |  | Great eloquence seems stammering.
 | 躁胜寒静胜热           |  | Excitement overcomes cold, stillness overcomes heat.
 | 清静为天下正           |  | Clarity and stillness set everything right.
-
-{% include kasi-nav.html num=45 %}
 
 -------
 {:#sitelen}
