--- a/lipu-nasin-pona/46.md
+++ b/lipu-nasin-pona/46.md
@@ -1,13 +1,7 @@
 ---
 layout: lipu-nasin-pona
-title: lipu pona la, kasi nanpa 46 • lipu Nasin Pona
-sidebar:
-  - title: "kasi ante"
-    text: |
-      * [monsi la, <br/> kasi nanpa 45](45)
-      * [kasi ale](index)
-      * [sinpin la, <br/> kasi nanpa 47](47)
-      {:.kasi-nav-sidebar}
+chapter: 46
+status: ready
 ---
 
 {:.loseta}
@@ -19,8 +13,6 @@ sidebar:
 | 祸莫大于不知足 |  | There is no greater disaster as bad as not knowing what is enough.
 | 咎莫大于欲得   |  | No greater than not wanting more.
 | 故知足之足<wbr/>常足矣 |  | Therefore the sufficiency that comes from knowing what is enough is an eternal sufficiency.
-
-{% include kasi-nav.html num=46 %}
 
 -------
 {:#sitelen}
