--- a/lipu-nasin-pona/47.md
+++ b/lipu-nasin-pona/47.md
@@ -1,13 +1,7 @@
 ---
 layout: lipu-nasin-pona
-title: lipu pona la, kasi nanpa 47 • lipu Nasin Pona
-sidebar:
-  - title: "kasi ante"
-    text: |
-      * [monsi la, <br/> kasi nanpa 46](46)
-      * [kasi ale](index)
-      * [sinpin la, <br/> kasi nanpa 48](48)
-      {:.kasi-nav-sidebar}
+chapter: 47
+status: ready
 ---
 
 {:.loseta}
@@ -21,8 +15,6 @@ sidebar:
 | 不为而成 |  | Is perfected without striving.
 
 [^1]: Miller: "The commentarial tradition reads 名 as meaning 明."
-
-{% include kasi-nav.html num=47 %}
 
 -------
 {:#sitelen}
