--- a/lipu-nasin-pona/48.md
+++ b/lipu-nasin-pona/48.md
@@ -1,13 +1,7 @@
 ---
 layout: lipu-nasin-pona
-title: lipu pona la, kasi nanpa 48 • lipu Nasin Pona
-sidebar:
-  - title: "kasi ante"
-    text: |
-      * [monsi la, <br/> kasi nanpa 47](47)
-      * [kasi ale](index)
-      * [sinpin la, <br/> kasi nanpa 49](49)
-      {:.kasi-nav-sidebar}
+chapter: 48
+status: ready
 ---
 
 {:.loseta}
@@ -20,8 +14,6 @@ sidebar:
 | 取天下常以无事 |  | You can possess the world by never manipulating it.
 | 及其有事       |  | No matter how much you manipulate
 | 不足以取天下   |  | You can never possess the world.
-
-{% include kasi-nav.html num=48 %}
 
 -------
 {:#sitelen}
