--- a/lipu-nasin-pona/50.md
+++ b/lipu-nasin-pona/50.md
@@ -1,13 +1,7 @@
 ---
 layout: lipu-nasin-pona
-title: lipu pona la, kasi nanpa 50 • lipu Nasin Pona
-sidebar:
-  - title: "kasi ante"
-    text: |
-      * [monsi la, <br/> kasi nanpa 49](49)
-      * [kasi ale](index)
-      * [sinpin la, <br/> kasi nanpa 51](51)
-      {:.kasi-nav-sidebar}
+chapter: 50
+status: ready
 ---
 
 {:.loseta}
@@ -26,8 +20,6 @@ sidebar:
 | 兵无所容其刃       |                 | Weapons find no place to receive their sharp edges.
 | 夫何故             |                 | Why?
 | 以其无死地         |                 | Because he has no death-ground.
-
-{% include kasi-nav.html num=50 %}
 
 -------
 {:#sitelen}
