--- a/lipu-nasin-pona/51.md
+++ b/lipu-nasin-pona/51.md
@@ -1,13 +1,7 @@
 ---
 layout: lipu-nasin-pona
-title: lipu pona la, kasi nanpa 51 • lipu Nasin Pona
-sidebar:
-  - title: "kasi ante"
-    text: |
-      * [monsi la, <br/> kasi nanpa 50](50)
-      * [kasi ale](index)
-      * [sinpin la, <br/> kasi nanpa 52](52)
-      {:.kasi-nav-sidebar}
+chapter: 51
+status: ready
 ---
 
 {:.loseta}
@@ -25,8 +19,6 @@ sidebar:
 | 为而不恃                               |  | Acts without expectation,
 | 长而不宰                               |  | Leads without forcing.
 | 是谓玄德                               |  | This is called “Mysterious Virtue.”
-
-{% include kasi-nav.html num=51 %}
 
 -------
 {:#sitelen}
