--- a/lipu-nasin-pona/52.md
+++ b/lipu-nasin-pona/52.md
@@ -1,13 +1,7 @@
 ---
 layout: lipu-nasin-pona
-title: lipu pona la, kasi nanpa 52 • lipu Nasin Pona
-sidebar:
-  - title: "kasi ante"
-    text: |
-      * [monsi la, <br/> kasi nanpa 51](51)
-      * [kasi ale](index)
-      * [sinpin la, <br/> kasi nanpa 53](53)
-      {:.kasi-nav-sidebar}
+chapter: 52
+status: ready
 ---
 
 {:.loseta}
@@ -27,8 +21,6 @@ sidebar:
 | 用其光<wbr/>复归其明     |  | Use the illumination, but return to the light.
 | 无遗身殃                 |  | Don't bring harm to yourself.
 | 是为习常                 |  | This is called “practicing the eternal.”
-
-{% include kasi-nav.html num=52 %}
 
 -------
 {:#sitelen}
