--- a/lipu-nasin-pona/53.md
+++ b/lipu-nasin-pona/53.md
@@ -1,13 +1,7 @@
 ---
 layout: lipu-nasin-pona
-title: lipu pona la, kasi nanpa 53 • lipu Nasin Pona
-sidebar:
-  - title: "kasi ante"
-    text: |
-      * [monsi la, <br/> kasi nanpa 52](52)
-      * [kasi ale](index)
-      * [sinpin la, <br/> kasi nanpa 54](54)
-      {:.kasi-nav-sidebar}
+chapter: 53
+status: ready
 ---
 
 {:.loseta}
@@ -25,8 +19,6 @@ sidebar:
 | 财货有馀     |  | Having wealth in excess.
 | 是谓盗夸     |  | They are called thieving braggarts.
 | 非道也哉     |  | This is definitely not the Way.
-
-{% include kasi-nav.html num=53 %}
 
 -------
 {:#sitelen}
