--- a/lipu-nasin-pona/54.md
+++ b/lipu-nasin-pona/54.md
@@ -1,13 +1,7 @@
 ---
 layout: lipu-nasin-pona
-title: lipu pona la, kasi nanpa 54 • lipu Nasin Pona
-sidebar:
-  - title: "kasi ante"
-    text: |
-      * [monsi la, <br/> kasi nanpa 53](53)
-      * [kasi ale](index)
-      * [sinpin la, <br/> kasi nanpa 55](55)
-      {:.kasi-nav-sidebar}
+chapter: 54
+status: wip
 ---
 
 {:.loseta}
@@ -25,10 +19,8 @@ sidebar:
 | 以乡观乡         |         | Take the town and observe the town.
 | 以国观国         |         | Take the country and observe the country.
 | 以天下观天下     |         | Take the world and observe the world.
-| 吾何以知天下然哉 |         | How do I know the world as it is?
-| 以此             | tan ni. | By this.
-
-{% include kasi-nav.html num=54 %}
+| 吾何以知天下然哉 | seme la, mi sona e ijo ale? | How do I know the world as it is?
+| 以此             | tan ni.                     | By this.
 
 -------
 {:#sitelen}
