--- a/lipu-nasin-pona/56.md
+++ b/lipu-nasin-pona/56.md
@@ -1,20 +1,14 @@
 ---
 layout: lipu-nasin-pona
-title: lipu pona la, kasi nanpa 56 • lipu Nasin Pona
-sidebar:
-  - title: "kasi ante"
-    text: |
-      * [monsi la, <br/> kasi nanpa 55](55)
-      * [kasi ale](index)
-      * [sinpin la, <br/> kasi nanpa 57](57)
-      {:.kasi-nav-sidebar}
+chapter: 56
+status: wip
 ---
 
 {:.loseta}
 |:-:|-|-
-| 知者不言           |  | One who knows does not speak.
-| 言者不知           |  | One who speaks does not know.
-| 塞其兑<wbr/>闭其门 |  | Close your holes, shut your doors,
+| 知者不言           | jan sona li toki ala. | One who knows does not speak.
+| 言者不知           | jan toki li sona ala. | One who speaks does not know.
+| 塞其兑<wbr/>闭其门 | o pini e lupa. | Close your holes, shut your doors,
 | 挫其锐<wbr/>解其分 |  | Soften your sharpness, loosen your knots.
 | 和其光<wbr/>同其尘 |  | Soften your glare and merge with the everyday.
 | 是谓玄同           |  | This is called mysteriously attaining oneness.
@@ -24,8 +18,6 @@ sidebar:
 | 不可得而贵         |  | You cannot possess it, but are esteemed through it
 | 不可得而贱         |  | And [though you cannot possess it, you are] humbled by it.
 | 故为天下贵         |  | Therefore the world values you.
-
-{% include kasi-nav.html num=56 %}
 
 -------
 {:#sitelen}
