--- a/lipu-nasin-pona/57.md
+++ b/lipu-nasin-pona/57.md
@@ -1,13 +1,7 @@
 ---
 layout: lipu-nasin-pona
-title: lipu pona la, kasi nanpa 57 • lipu Nasin Pona
-sidebar:
-  - title: "kasi ante"
-    text: |
-      * [monsi la, <br/> kasi nanpa 56](56)
-      * [kasi ale](index)
-      * [sinpin la, <br/> kasi nanpa 58](58)
-      {:.kasi-nav-sidebar}
+chapter: 57
+status: ready
 ---
 
 {:.loseta}
@@ -30,8 +24,6 @@ sidebar:
 | 我好静<wbr/>而民自正 |  | I enjoy my serenity and the people correct themselves.
 | 我无事<wbr/>而民自富 |  | I do not interfere and the people enrich themselves.
 | 我无欲<wbr/>而民自朴 |  | I have no desires<br/> And the people find their original mind.
-
-{% include kasi-nav.html num=57 %}
 
 -------
 {:#sitelen}
