--- a/lipu-nasin-pona/58.md
+++ b/lipu-nasin-pona/58.md
@@ -1,13 +1,7 @@
 ---
 layout: lipu-nasin-pona
-title: lipu pona la, kasi nanpa 58 • lipu Nasin Pona
-sidebar:
-  - title: "kasi ante"
-    text: |
-      * [monsi la, <br/> kasi nanpa 57](57)
-      * [kasi ale](index)
-      * [sinpin la, <br/> kasi nanpa 59](59)
-      {:.kasi-nav-sidebar}
+chapter: 58
+status: ready
 ---
 
 {:.loseta}
@@ -27,8 +21,6 @@ sidebar:
 | 廉而不刿     |  | Edges without separating.
 | 直而不肆     |  | Straightens without lining up.
 | 光而不耀     |  | Shines but does not glare.
-
-{% include kasi-nav.html num=58 %}
 
 -------
 {:#sitelen}
