--- a/lipu-nasin-pona/59.md
+++ b/lipu-nasin-pona/59.md
@@ -1,13 +1,7 @@
 ---
 layout: lipu-nasin-pona
-title: lipu pona la, kasi nanpa 59 • lipu Nasin Pona
-sidebar:
-  - title: "kasi ante"
-    text: |
-      * [monsi la, <br/> kasi nanpa 58](58)
-      * [kasi ale](index)
-      * [sinpin la, <br/> kasi nanpa 60](60)
-      {:.kasi-nav-sidebar}
+chapter: 59
+status: ready
 ---
 
 {:.loseta}
@@ -25,8 +19,6 @@ sidebar:
 | 有国之母<wbr/>可以长久 |  | The Mother who possesses the country can be long-living.
 | 是谓深根固柢         |  | This is called “planting the roots deeply and firmly.”
 | 长生久视之道         |  | The way to long life and eternal vision.
-
-{% include kasi-nav.html num=59 %}
 
 -------
 {:#sitelen}
