--- a/lipu-nasin-pona/60.md
+++ b/lipu-nasin-pona/60.md
@@ -1,13 +1,7 @@
 ---
 layout: lipu-nasin-pona
-title: lipu pona la, kasi nanpa 60 • lipu Nasin Pona
-sidebar:
-  - title: "kasi ante"
-    text: |
-      * [monsi la, <br/> kasi nanpa 59](59)
-      * [kasi ale](index)
-      * [sinpin la, <br/> kasi nanpa 61](61)
-      {:.kasi-nav-sidebar}
+chapter: 60
+status: ready
 ---
 
 {:.loseta}
@@ -26,8 +20,6 @@ sidebar:
 [^5]: [Muller:] "Spirits of people who died early, in some unfortunate way, or without descendants, who mingle in the world and plague people."
 [^6]: [Muller:] "Translated elsewhere as “numinousity,” “spiritual power,” etc."
 [^7]: [Muller:] "The interpretation of this final line varies widely among translators; we decided to try to remain terse and close to the literal meaning here."
-
-{% include kasi-nav.html num=60 %}
 
 -------
 {:#sitelen}
