--- a/lipu-nasin-pona/61.md
+++ b/lipu-nasin-pona/61.md
@@ -1,13 +1,7 @@
 ---
 layout: lipu-nasin-pona
-title: lipu pona la, kasi nanpa 61 • lipu Nasin Pona
-sidebar:
-  - title: "kasi ante"
-    text: |
-      * [monsi la, <br/> kasi nanpa 60](60)
-      * [kasi ale](index)
-      * [sinpin la, <br/> kasi nanpa 62](62)
-      {:.kasi-nav-sidebar}
+chapter: 61
+status: ready
 ---
 
 {:.loseta}
@@ -29,8 +23,6 @@ sidebar:
 | 欲入事人               |  | Than to enter into the service of the right person.
 | 夫两者<wbr/>各得其所欲 |  | Thus both get what they want.
 | 大者宜为下             |  | Greatness lies in placing oneself below.
-
-{% include kasi-nav.html num=61 %}
 
 -------
 {:#sitelen}
