--- a/lipu-nasin-pona/63.md
+++ b/lipu-nasin-pona/63.md
@@ -1,13 +1,7 @@
 ---
 layout: lipu-nasin-pona
-title: lipu pona la, kasi nanpa 63 • lipu Nasin Pona
-sidebar:
-  - title: "kasi ante"
-    text: |
-      * [monsi la, <br/> kasi nanpa 62](62)
-      * [kasi ale](index)
-      * [sinpin la, <br/> kasi nanpa 64](64)
-      {:.kasi-nav-sidebar}
+chapter: 63
+status: ready
 ---
 
 {:.loseta}
@@ -29,8 +23,6 @@ sidebar:
 | 多易必多难             |  | Much ease turns into much difficulty.
 | 是以圣人<wbr/>犹难之   |  | Therefore the sage treats things as though they were difficult,
 | 故终无难矣             |  | And hence, never has difficulty.
-
-{% include kasi-nav.html num=63 %}
 
 -------
 {:#sitelen}
