--- a/lipu-nasin-pona/65.md
+++ b/lipu-nasin-pona/65.md
@@ -1,13 +1,7 @@
 ---
 layout: lipu-nasin-pona
-title: lipu pona la, kasi nanpa 65 • lipu Nasin Pona
-sidebar:
-  - title: "kasi ante"
-    text: |
-      * [monsi la, <br/> kasi nanpa 64](64)
-      * [kasi ale](index)
-      * [sinpin la, <br/> kasi nanpa 66](66)
-      {:.kasi-nav-sidebar}
+chapter: 65
+status: wip
 ---
 
 {:.loseta}
@@ -23,12 +17,10 @@ sidebar:
 | 不以智治国   |  | If you don't use cleverness to rule the state
 | 国之福       |  | You are a blessing to the state.
 | 知此两者<wbr/>亦稽式 |  | If you understand these two points, you know the proper norm for governing.
-| 常知稽式<wbr/>是谓玄德 | ... nimi li Pona Nasa. | To be continuously understanding the proper norm is called Mysterious Virtue.
-| 玄德深矣<wbr/>远矣 | Pona Nasa li suli mute a! | How deep and far-reaching Mysterious Virtue is!
-| 与物反矣           | ijo ale li sin kama. | It makes all return
-| 然后乃至大顺       |  | Until they reach the Great Norm.
-
-{% include kasi-nav.html num=65 %}
+| 常知稽式<wbr/>是谓玄德 | tenpo ale la, sona ... nimi li Pona Nasa. | To be continuously understanding the proper norm is called Mysterious Virtue.
+| 玄德深矣<wbr/>远矣 | pona Nasa li suli mute a! | How deep and far-reaching Mysterious Virtue is!
+| 与物反矣           | ijo ale li sin kama.      | It makes all return
+| 然后乃至大顺       |                           | Until they reach the Great Norm.
 
 -------
 {:#sitelen}
