--- a/lipu-nasin-pona/66.md
+++ b/lipu-nasin-pona/66.md
@@ -1,13 +1,7 @@
 ---
 layout: lipu-nasin-pona
-title: lipu pona la, kasi nanpa 66 • lipu Nasin Pona
-sidebar:
-  - title: "kasi ante"
-    text: |
-      * [monsi la, <br/> kasi nanpa 65](65)
-      * [kasi ale](index)
-      * [sinpin la, <br/> kasi nanpa 67](67)
-      {:.kasi-nav-sidebar}
+chapter: 66
+status: ready
 ---
 
 {:.loseta}
@@ -27,9 +21,7 @@ sidebar:
 | 以其不争                   |  | Since he does not contend
 | 故天下<wbr/>莫能与之争     |  | No one can contend with him.
 
-{% include kasi-nav.html num=66 %}
-
--------
+------
 {:#sitelen}
 
 ...
