--- a/lipu-nasin-pona/67.md
+++ b/lipu-nasin-pona/67.md
@@ -1,13 +1,7 @@
 ---
 layout: lipu-nasin-pona
-title: lipu pona la, kasi nanpa 67 • lipu Nasin Pona
-sidebar:
-  - title: "kasi ante"
-    text: |
-      * [monsi la, <br/> kasi nanpa 66](66)
-      * [kasi ale](index)
-      * [sinpin la, <br/> kasi nanpa 68](68)
-      {:.kasi-nav-sidebar}
+chapter: 67
+status: wip
 ---
 
 {:.loseta}
@@ -19,10 +13,10 @@ sidebar:
 | 若肖久矣         |  | If there were something that were consistently like it
 | 其细也夫         |  | How could it be small?
 | 我有三宝<wbr/>持而保之 | mi jo, kin mi olin e ijo ni la: | I have three treasures that I hold and cherish.
-| 一曰慈           |  | The first is compassion,
-| 二曰俭           |  | The second is frugality,
-| 三曰不敢为天下先 |  | The third is not daring to put myself ahead of everybody.
-| 慈故能勇         |  | Having compassion, I can be brave.
+| 一曰慈           | wan la, olin. | The first is compassion,
+| 二曰俭           | tu la, ...    | The second is frugality,
+| 三曰不敢为天下先 | mute la, ...  | The third is not daring to put myself ahead of everybody.
+| 慈故能勇         | mi jo e olin la, mi ken ... | Having compassion, I can be brave.
 | 俭故能广         |  | Having frugality, I can be generous.
 | 不敢为天下先     |  | Not daring to put myself ahead of everybody
 | 故能成器长       |  | I can take the time to perfect my abilities.
@@ -34,8 +28,6 @@ sidebar:
 | 以守则固         |  | If you protect yourself with compassion you will be impervious.
 | 天将救之         |  | Heaven will take care of you,
 | 以慈卫之         |  | Protecting you with compassion.
-
-{% include kasi-nav.html num=67 %}
 
 -------
 {:#sitelen}
