--- a/lipu-nasin-pona/68.md
+++ b/lipu-nasin-pona/68.md
@@ -1,13 +1,8 @@
 ---
 layout: lipu-nasin-pona
-title: lipu pona la, kasi nanpa 68 • lipu Nasin Pona
-sidebar:
-  - title: "kasi ante"
-    text: |
-      * [monsi la, <br/> kasi nanpa 67](67)
-      * [kasi ale](index)
-      * [sinpin la, <br/> kasi nanpa 69](69)
-      {:.kasi-nav-sidebar}
+chapter: 68
+title: wawa pi utala ala
+status: wip
 ---
 
 {:.loseta}
@@ -19,8 +14,6 @@ sidebar:
 | 是谓<wbr/>不争之德   | nimi ni li pona Wile Ala. | This is called the virtue of non-contention.
 | 是谓<wbr/>用人之力   | nimi ni li wawa Pali Jan. | It is called the ability to engage people's talents.
 | 是谓<wbr/>配天古之极 | nimi ni li ______ Wan Sewi. | It is called the ultimate in merging with Heaven.
-
-{% include kasi-nav.html num=68 %}
 
 -------
 {:#sitelen}
