--- a/lipu-nasin-pona/69.md
+++ b/lipu-nasin-pona/69.md
@@ -1,13 +1,7 @@
 ---
 layout: lipu-nasin-pona
-title: lipu pona la, kasi nanpa 69 • lipu Nasin Pona
-sidebar:
-  - title: "kasi ante"
-    text: |
-      * [monsi la, <br/> kasi nanpa 68](68)
-      * [kasi ale](index)
-      * [sinpin la, <br/> kasi nanpa 70](70)
-      {:.kasi-nav-sidebar}
+chapter: 69
+status: ready
 ---
 
 {:.loseta}
@@ -25,8 +19,6 @@ sidebar:
 | 故抗                 |  | Therefore
 | 兵相加               |  | When opponents clash
 | 哀者胜矣             |  | The one who is sorry about it will be the winner.
-
-{% include kasi-nav.html num=69 %}
 
 -------
 {:#sitelen}
