--- a/lipu-nasin-pona/70.md
+++ b/lipu-nasin-pona/70.md
@@ -1,13 +1,7 @@
 ---
 layout: lipu-nasin-pona
-title: lipu pona la, kasi nanpa 70 • lipu Nasin Pona
-sidebar:
-  - title: "kasi ante"
-    text: |
-      * [monsi la, <br/> kasi nanpa 69](69)
-      * [kasi ale](index)
-      * [sinpin la, <br/> kasi nanpa 71](71)
-      {:.kasi-nav-sidebar}
+chapter: 70
+status: ready
 ---
 
 {:.loseta}
@@ -24,8 +18,6 @@ sidebar:
 | 则我者贵   |  | I am valued.
 | 是以<wbr/>圣人<wbr/>被褐 |  | Therefore the sage wears coarse clothes.
 | 怀玉       |  | Yet hides a jewel in his bosom.
-
-{% include kasi-nav.html num=70 %}
 
 -------
 {:#sitelen}
