--- a/lipu-nasin-pona/71.md
+++ b/lipu-nasin-pona/71.md
@@ -1,13 +1,7 @@
 ---
 layout: lipu-nasin-pona
-title: lipu pona la, kasi nanpa 71 • lipu Nasin Pona
-sidebar:
-  - title: "kasi ante"
-    text: |
-      * [monsi la, <br/> kasi nanpa 70](70)
-      * [kasi ale](index)
-      * [sinpin la, <br/> kasi nanpa 72](72)
-      {:.kasi-nav-sidebar}
+chapter: 71
+status: ready
 ---
 
 {:.loseta}
@@ -18,8 +12,6 @@ sidebar:
 | 圣人不病               |  | The sage's not being sick
 | 以其病病               |  | Is because she is sick of sickness.
 | 是以不病               |  | Therefore she is not sick.
-
-{% include kasi-nav.html num=71 %}
 
 -------
 {:#sitelen}
