--- a/lipu-nasin-pona/72.md
+++ b/lipu-nasin-pona/72.md
@@ -1,13 +1,7 @@
 ---
 layout: lipu-nasin-pona
-title: lipu pona la, kasi nanpa 72 • lipu Nasin Pona
-sidebar:
-  - title: "kasi ante"
-    text: |
-      * [monsi la, <br/> kasi nanpa 71](71)
-      * [kasi ale](index)
-      * [sinpin la, <br/> kasi nanpa 73](73)
-      {:.kasi-nav-sidebar}
+chapter: 72
+status: ready
 ---
 
 {:.loseta}
@@ -23,8 +17,6 @@ sidebar:
 | 不自贵 |  | But does not prize herself.
 | 故去彼 |  | Therefore she lets go of that
 | 取此 |  | And takes this.
-
-{% include kasi-nav.html num=72 %}
 
 -------
 {:#sitelen}
