--- a/lipu-nasin-pona/73.md
+++ b/lipu-nasin-pona/73.md
@@ -1,13 +1,7 @@
 ---
 layout: lipu-nasin-pona
-title: lipu pona la, kasi nanpa 73 • lipu Nasin Pona
-sidebar:
-  - title: "kasi ante"
-    text: |
-      * [monsi la, <br/> kasi nanpa 72](72)
-      * [kasi ale](index)
-      * [sinpin la, <br/> kasi nanpa 74](74)
-      {:.kasi-nav-sidebar}
+chapter: 73
+status: ready
 ---
 
 {:.loseta}
@@ -23,8 +17,6 @@ sidebar:
 | 繟然而善谋             |  | To plan well without anxiety.
 | 天网恢恢               |  | Heaven's net is vast.
 | 疏而不失               |  | It is loose. Yet nothing slips through.
-
-{% include kasi-nav.html num=73 %}
 
 -------
 {:#sitelen}
