--- a/lipu-nasin-pona/74.md
+++ b/lipu-nasin-pona/74.md
@@ -1,13 +1,7 @@
 ---
 layout: lipu-nasin-pona
-title: lipu pona la, kasi nanpa 74 • lipu Nasin Pona
-sidebar:
-  - title: "kasi ante"
-    text: |
-      * [monsi la, <br/> kasi nanpa 73](73)
-      * [kasi ale](index)
-      * [sinpin la, <br/> kasi nanpa 75](75)
-      {:.kasi-nav-sidebar}
+chapter: 74
+status: ready
 ---
 
 {:.loseta}
@@ -22,8 +16,6 @@ sidebar:
 | 夫司杀者     |  | If you play the role of the official executioner
 | 是大匠斫<wbr/>夫代大匠斫者 |  | It is like cutting wood in the capacity of Master Carpenter.
 | 希有不伤其手矣 |  | There are few who will not cut their hands.
-
-{% include kasi-nav.html num=74 %}
 
 -------
 {:#sitelen}
