--- a/lipu-nasin-pona/75.md
+++ b/lipu-nasin-pona/75.md
@@ -1,13 +1,7 @@
 ---
 layout: lipu-nasin-pona
-title: lipu pona la, kasi nanpa 75 • lipu Nasin Pona
-sidebar:
-  - title: "kasi ante"
-    text: |
-      * [monsi la, <br/> kasi nanpa 74](74)
-      * [kasi ale](index)
-      * [sinpin la, <br/> kasi nanpa 76](76)
-      {:.kasi-nav-sidebar}
+chapter: 75
+status: ready
 ---
 
 {:.loseta}
@@ -23,8 +17,6 @@ sidebar:
 | 是以轻死             |  | Therefore they take death lightly.
 | 夫唯无以生为者       |  | It is only by not living for your own ends
 | 是贤于贵生           |  | That you can go beyond valuing life.
-
-{% include kasi-nav.html num=75 %}
 
 -------
 {:#sitelen}
