--- a/lipu-nasin-pona/76.md
+++ b/lipu-nasin-pona/76.md
@@ -1,13 +1,8 @@
 ---
 layout: lipu-nasin-pona
-title: lipu pona la, kasi nanpa 76 • lipu Nasin Pona
-sidebar:
-  - title: "kasi ante"
-    text: |
-      * [monsi la, <br/> kasi nanpa 75](75)
-      * [kasi ale](index)
-      * [sinpin la, <br/> kasi nanpa 77](77)
-      {:.kasi-nav-sidebar}
+chapter: 76
+title: suwi
+status: wip
 ---
 
 {:.loseta}
@@ -22,8 +17,6 @@ sidebar:
 | 木强则共           |                                                               | When a tree is hard enough, it is cut. Therefore
 | 强大处下           | ona kiwen e ona suli li anpa.                                 | The hard and big are lesser,
 | 柔弱处上           | ona kon e ona suwi li wawa.                                   | The gentle and soft are greater.
-
-{% include kasi-nav.html num=76 %}
 
 -------
 {:#sitelen}
