--- a/lipu-nasin-pona/78.md
+++ b/lipu-nasin-pona/78.md
@@ -1,13 +1,7 @@
 ---
 layout: lipu-nasin-pona
-title: lipu pona la, kasi nanpa 78 • lipu Nasin Pona
-sidebar:
-  - title: "kasi ante"
-    text: |
-      * [monsi la, <br/> kasi nanpa 77](77)
-      * [kasi ale](index)
-      * [sinpin la, <br/> kasi nanpa 79](79)
-      {:.kasi-nav-sidebar}
+chapter: 78
+status: ready
 ---
 
 {:.loseta}
@@ -25,8 +19,6 @@ sidebar:
 | 受国不祥           |  | The one who accepts its calamity
 | 是谓天下王         |  | Becomes king of the world.
 | 正言若反           |  | Truth seems contradictory.
-
-{% include kasi-nav.html num=78 %}
 
 -------
 {:#sitelen}
