--- a/lipu-nasin-pona/80.md
+++ b/lipu-nasin-pona/80.md
@@ -1,13 +1,7 @@
 ---
 layout: lipu-nasin-pona
-title: lipu pona la, kasi nanpa 80 • lipu Nasin Pona
-sidebar:
-  - title: "kasi ante"
-    text: |
-      * [monsi la, <br/> kasi nanpa 79](79)
-      * [kasi ale](index)
-      * [sinpin la, <br/> kasi nanpa 81](81)
-      {:.kasi-nav-sidebar}
+chapter: 80
+status: ready
 ---
 
 {:.loseta}
@@ -21,8 +15,6 @@ sidebar:
 | 甘其食<wbr/>美其服<wbr/>安其居<wbr/>乐其俗 |  | Sweeten their food, give them nice clothes, a peaceful abode and a relaxed life.
 | 邻国相望<wbr/>鸡犬之声相闻 |  | Even though the next country can be seen and its dogs and chickens can be heard,
 | 民至老死<wbr/>不相往来     |  | The people will grow old and die without visiting each other's land.
-
-{% include kasi-nav.html num=80 %}
 
 -------
 {:#sitelen}
