--- a/lipu-nasin-pona/81.md
+++ b/lipu-nasin-pona/81.md
@@ -1,12 +1,8 @@
 ---
 layout: lipu-nasin-pona
-title: lipu nasin la, kasi nanpa 81 • lipu Nasin Pona
-sidebar:
-  - title: "kasi ante"
-    text: |
-      * [monsi la, <br/> kasi nanpa 80](80)
-      * [kasi ale](index)
-      {:.kasi-nav-sidebar}
+chapter: 81
+title: jan pi lukin lipu li suno ala
+status: done
 ---
 
 {:.loseta}
@@ -22,8 +18,6 @@ sidebar:
 | 既以与人己愈多   | pana tawa jan ale la, jan li mute.          | Giving her surplus to others she is enriched.
 | 天之道利而不害   | nasin sewi la, jan li pona li pakala ala.   | The way of Heaven is to help and not harm.
 | 圣人之道为而不争 | nasin jan sewi la, jan li pali li wile ala. | The way of the Sage is to act without wrangling.
-
-{% include kasi-nav.html num=81 %}
 
 -------
 {:#sitelen}
