--- a/lipu-nasin-pona/17.md
+++ b/lipu-nasin-pona/17.md
@@ -1,13 +1,8 @@
 ---
 layout: lipu-nasin-pona
-title: lipu nasin la, kasi nanpa 17 • lipu Nasin Pona
-sidebar:
-  - title: "kasi ante"
-    text: |
-      * [monsi la, <br/> kasi nanpa 16](16)
-      * [kasi ale](index)
-      * [sinpin la, <br/> kasi nanpa 18](18)
-      {:.kasi-nav-sidebar}
+chapter: 17
+title: mi pali a
+status: done
 ---
 
 {:.loseta}
@@ -19,9 +14,7 @@ sidebar:
 | 信不足焉<wbr/>有不信焉 | jan pi pilin ala la, jan ala li pilin e jan ni. | If you lack sincerity no one will believe you.
 | 悠兮其贵言             | o olin a e toki pona!                           | How careful she is with her precious words!
 | 功成事遂               | ona li pali pini la,                            | When her work is complete and her job is finished,
-| 百姓皆谓<wbr/>我自然   | jan ale li toki e ni: mi li pali a!             | Everybody says: “We did it!”
-
-{% include kasi-nav.html num=17 %}
+| 百姓皆谓<wbr/>我自然   | jan ale li toki e ni: mi ale li pali a!         | Everybody says: “We did it!”
 
 -------
 {:#sitelen}
