--- a/lipu-nasin-pona/20.md
+++ b/lipu-nasin-pona/20.md
@@ -1,13 +1,8 @@
 ---
 layout: lipu-nasin-pona
-title: lipu nasin la, kasi nanpa 20 • lipu Nasin Pona
-sidebar:
-  - title: "kasi ante"
-    text: |
-      * [monsi la, <br/> kasi nanpa 19](19)
-      * [kasi ale](index)
-      * [sinpin la, <br/> kasi nanpa 21](21)
-      {:.kasi-nav-sidebar}
+chapter: 20
+title: jan lili sin pi uta...
+status: ready
 ---
 
 {:.loseta}
