--- a/lipu-nasin-pona/23.md
+++ b/lipu-nasin-pona/23.md
@@ -1,13 +1,7 @@
 ---
 layout: lipu-nasin-pona
-title: lipu nasin la, kasi nanpa 23 • lipu Nasin Pona
-sidebar:
-  - title: "kasi ante"
-    text: |
-      * [monsi la, <br/> kasi nanpa 22](22)
-      * [kasi ale](index)
-      * [sinpin la, <br/> kasi nanpa 24](24)
-      {:.kasi-nav-sidebar}
+chapter: 23
+status: ready
 ---
 
 {:.loseta}
