--- a/lipu-nasin-pona/31.md
+++ b/lipu-nasin-pona/31.md
@@ -1,13 +1,7 @@
 ---
 layout: lipu-nasin-pona
-title: lipu nasin la, kasi nanpa 31 • lipu Nasin Pona
-sidebar:
-  - title: "kasi ante"
-    text: |
-      * [monsi la, <br/> kasi nanpa 30](30)
-      * [kasi ale](index)
-      * [sinpin la, <br/> kasi nanpa 32](32)
-      {:.kasi-nav-sidebar}
+chapter: 31
+status: ready
 ---
 
 {:.loseta}
@@ -34,8 +28,6 @@ sidebar:
 | 杀人之众                   |  | The common people, from whom all the dead have come
 | 以哀悲泣之                 |  | Weep in lamentation.
 | 战胜以丧礼处之             |  | The victors bury them with funerary rites.
-
-{% include kasi-nav.html num=31 %}
 
 -------
 {:#sitelen}
