--- a/lipu-nasin-pona/39.md
+++ b/lipu-nasin-pona/39.md
@@ -1,13 +1,7 @@
 ---
 layout: lipu-nasin-pona
-title: lipu pona la, kasi nanpa 39 • lipu Nasin Pona
-sidebar:
-  - title: "kasi ante"
-    text: |
-      * [monsi la, <br/> kasi nanpa 38](38)
-      * [kasi ale](index)
-      * [sinpin la, <br/> kasi nanpa 40](40)
-      {:.kasi-nav-sidebar}
+chapter: 39
+status: ready
 ---
 
 {:.loseta}
@@ -34,8 +28,6 @@ sidebar:
 | 故<wbr/>致数誉无誉       |  | In this way you can bring about great effect without burden.
 | 不欲琭琭如玉             |  | Not desiring the rarity of gems
 | 珞珞如石                 |  | Or the manyness of grains of sand.
-
-{% include kasi-nav.html num=39 %}
 
 -------
 {:#sitelen}
