--- a/lipu-nasin-pona/40.md
+++ b/lipu-nasin-pona/40.md
@@ -1,13 +1,7 @@
 ---
 layout: lipu-nasin-pona
-title: lipu pona la, kasi nanpa 40 • lipu Nasin Pona
-sidebar:
-  - title: "kasi ante"
-    text: |
-      * [monsi la, <br/> kasi nanpa 39](39)
-      * [kasi ale](index)
-      * [sinpin la, <br/> kasi nanpa 41](41)
-      {:.kasi-nav-sidebar}
+chapter: 40
+status: ready
 ---
 
 {:.loseta}
@@ -16,8 +10,6 @@ sidebar:
 | 弱者道之用     |  | Softening is its function.
 | 天下万物<wbr/>生于有 |  | All things in the cosmos arise from being.
 | 有生于无       |  | Being arises from non-being.
-
-{% include kasi-nav.html num=40 %}
 
 -------
 {:#sitelen}
