--- a/lipu-nasin-pona/43.md
+++ b/lipu-nasin-pona/43.md
@@ -1,13 +1,7 @@
 ---
 layout: lipu-nasin-pona
-title: lipu pona la, kasi nanpa 43 • lipu Nasin Pona
-sidebar:
-  - title: "kasi ante"
-    text: |
-      * [monsi la, <br/> kasi nanpa 42](42)
-      * [kasi ale](index)
-      * [sinpin la, <br/> kasi nanpa 44](44)
-      {:.kasi-nav-sidebar}
+chapter: 43
+status: ready
 ---
 
 {:.loseta}
@@ -18,8 +12,6 @@ sidebar:
 | 吾是以知无为之有益     |  | Therefore I know the benefit of unattached-action.
 | 不言之教<wbr/>无为之益 |  | The wordless teaching and unattached-action
 | 天下希及之             |  | Are rarely seen.
-
-{% include kasi-nav.html num=43 %}
 
 -------
 {:#sitelen}
