--- a/lipu-nasin-pona/49.md
+++ b/lipu-nasin-pona/49.md
@@ -1,13 +1,7 @@
 ---
 layout: lipu-nasin-pona
-title: lipu pona la, kasi nanpa 49 • lipu Nasin Pona
-sidebar:
-  - title: "kasi ante"
-    text: |
-      * [monsi la, <br/> kasi nanpa 48](48)
-      * [kasi ale](index)
-      * [sinpin la, <br/> kasi nanpa 50](50)
-      {:.kasi-nav-sidebar}
+chapter: 49
+status: ready
 ---
 
 {:.loseta}
@@ -21,8 +15,6 @@ sidebar:
 | 圣人在天下<wbr/>歙歙为天下浑其心 |  | When the sage lives with people, she harmonizes with them
 | 百姓皆注其耳目 |  | And conceals her mind for them.
 | 圣人皆孩之     |  | The sages treat them as their little children.
-
-{% include kasi-nav.html num=49 %}
 
 -------
 {:#sitelen}
