--- a/lipu-nasin-pona/55.md
+++ b/lipu-nasin-pona/55.md
@@ -1,19 +1,13 @@
 ---
 layout: lipu-nasin-pona
-title: lipu pona la, kasi nanpa 55 • lipu Nasin Pona
-sidebar:
-  - title: "kasi ante"
-    text: |
-      * [monsi la, <br/> kasi nanpa 54](54)
-      * [kasi ale](index)
-      * [sinpin la, <br/> kasi nanpa 56](56)
-      {:.kasi-nav-sidebar}
+chapter: 55
+status: wip
 ---
 
 {:.loseta}
 |:-:|-|-
-| 含德之厚     |                               | One who remains rich in virtuous power
-| 比于赤子     |                               | Is like a newborn baby.
+| 含德之厚     | ona pi wawa pona...           | One who remains rich in virtuous power
+| 比于赤子     | li sama e jan lili sin.       | Is like a newborn baby.
 | 蜂虿虺蛇不螫 |                               | Bees, scorpions and venomous snakes do not bite it,
 | 猛兽不据     |                               | The wild beasts do not attack it,
 | 攫鸟不搏     |                               | Birds of prey do not sink their claws into it.
@@ -21,8 +15,8 @@ sidebar:
 | 筋柔         |                               | And muscles soft,
 | 而握固       |                               | Its grip is strong.
 | 未知牝牡之   | ona li mije li meli li tonsi la, jan li sona ala. | Without knowing of the blending of male and female
-| 合而全作     | taso ona li ken pali ale.     | S/he is a perfect production,
-| 精之至也     |                               | The ultimate in vitality.
+| 合而全作     | taso ona li ken pali ale.                         | S/he is a perfect production,
+| 精之至也     |                                                   | The ultimate in vitality.
 | 终日号而不嗄 |                               | S/he cries all day without getting hoarse.
 | 和之至也     |                               | S/he is the ultimate in harmony.
 | 知和曰常     |                               | Understanding harmony is called the Constant.
@@ -32,8 +26,6 @@ sidebar:
 | 物壮则老     |                               | After things blossom they decay, and
 | 谓之不道     |                               | This is called the non-Way.
 | 不道早已     |                               | The non-Way expires quickly.
-
-{% include kasi-nav.html num=55 %}
 
 -------
 {:#sitelen}
