--- a/lipu-nasin-pona/62.md
+++ b/lipu-nasin-pona/62.md
@@ -1,13 +1,7 @@
 ---
 layout: lipu-nasin-pona
-title: lipu pona la, kasi nanpa 62 • lipu Nasin Pona
-sidebar:
-  - title: "kasi ante"
-    text: |
-      * [monsi la, <br/> kasi nanpa 61](61)
-      * [kasi ale](index)
-      * [sinpin la, <br/> kasi nanpa 63](63)
-      {:.kasi-nav-sidebar}
+chapter: 62
+status: ready
 ---
 
 {:.loseta}
@@ -25,8 +19,6 @@ sidebar:
 | 不曰<wbr/>以求得       |  | You can't say that it was for seeking gain
 | 有罪以免耶             |  | Or to have punishments to deter crime.
 | 故为天下贵             |  | Therefore it is the most prized in the world.
-
-{% include kasi-nav.html num=62 %}
 
 -------
 {:#sitelen}
