--- a/lipu-nasin-pona/64.md
+++ b/lipu-nasin-pona/64.md
@@ -1,13 +1,7 @@
 ---
 layout: lipu-nasin-pona
-title: lipu pona la, kasi nanpa 64 • lipu Nasin Pona
-sidebar:
-  - title: "kasi ante"
-    text: |
-      * [monsi la, <br/> kasi nanpa 63](63)
-      * [kasi ale](index)
-      * [sinpin la, <br/> kasi nanpa 65](65)
-      {:.kasi-nav-sidebar}
+chapter: 64
+status: ready
 ---
 
 {:.loseta}
@@ -36,8 +30,6 @@ sidebar:
 | 复众人之所过           |  | So that she can correct the mistakes of average people
 | 以辅万物之自然         |  | And aid all things in manifesting their true nature
 | 而不敢为               |  | Without presuming to take the initiative.
-
-{% include kasi-nav.html num=64 %}
 
 -------
 {:#sitelen}
