--- a/lipu-nasin-pona/77.md
+++ b/lipu-nasin-pona/77.md
@@ -1,13 +1,7 @@
 ---
 layout: lipu-nasin-pona
-title: lipu pona la, kasi nanpa 77 • lipu Nasin Pona
-sidebar:
-  - title: "kasi ante"
-    text: |
-      * [monsi la, <br/> kasi nanpa 76](76)
-      * [kasi ale](index)
-      * [sinpin la, <br/> kasi nanpa 78](78)
-      {:.kasi-nav-sidebar}
+chapter: 77
+status: ready
 ---
 
 {:.loseta}
@@ -29,8 +23,6 @@ sidebar:
 | 是以圣人<wbr/>为而不侍 |  | Therefore the sage acts without expectation.
 | 功成而不处             |  | Does not abide in his accomplishments.
 | 其不欲见贤             |  | Does not want to show his virtue.
-
-{% include kasi-nav.html num=77 %}
 
 -------
 {:#sitelen}
