--- a/lipu-nasin-pona/79.md
+++ b/lipu-nasin-pona/79.md
@@ -1,13 +1,7 @@
 ---
 layout: lipu-nasin-pona
-title: lipu pona la, kasi nanpa 79 • lipu Nasin Pona
-sidebar:
-  - title: "kasi ante"
-    text: |
-      * [monsi la, <br/> kasi nanpa 78](78)
-      * [kasi ale](index)
-      * [sinpin la, <br/> kasi nanpa 80](80)
-      {:.kasi-nav-sidebar}
+chapter: 79
+status: ready
 ---
 
 {:.loseta}
@@ -25,8 +19,6 @@ sidebar:
 [^8]: Muller: "左契 literally means the “left side of the tally.” Ancient contracts in East Asia were made by writing the agreement on a wooden board that would be broken in half, and rematched when the contract had been fulfilled."
 [^9]: Muller: "The interpretation of 司契 and 司徹 here varies considerably among translators. We take it as one of the plethora of expressions of the pervasive notion of wu-wei in the Daodejing, which implies doing things by focusing on the content, and what one can actual do well, rather than on expectations of a rapid conclusion. Cf. the translations by D.C. Lau, Richard Llynn, Ellen Chen, John Wu, and others."
 [^10]: Muller: "Cf. Analects 4:10: The Master said: “When the noble man deals with the world he is not prejudiced for or against anything. He does what is Right.” 子曰。君子之於天下也、無適也、無莫也、義之與比。"
-
-{% include kasi-nav.html num=79 %}
 
 -------
 {:#sitelen}
